--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/BuzzSpaceB/Space.git"
   },
-  "author": "",
+  "author": "Space Team",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BuzzSpaceB/Space/issues"
