--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Buzz Space functional module",
   "main": "buzzSpace.js",
-  "test": "tester.js",
+  "test": "test",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
